[REFACTORING] footer component

--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -1,6 +1,6 @@
-<div class="content-wrapper container-xxl p-0 full-width mb-1">
-  <div class="content-body">
-    <div class="card">
+<div class="card">
+  <div class="content-wrapper container-xxl p-0 full-width">
+    <div class="content-body">
       <div class="card-body align-items-center d-flex justify-content-between">
         <div class="text-dark">{{ coreConfig.app.appTitle }} ©</div>
         <div>
