--- a/src/app/layout/components/footer/footer.component.scss
+++ b/src/app/layout/components/footer/footer.component.scss
@@ -3,5 +3,6 @@
 .card {
   box-shadow: none;
   margin-bottom: 1rem;
+  border-radius: 0;
   // background-color: mix(white, $primary, 95) !important;
 }
