[REFACTORING] brand logo & text

--- a/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
+++ b/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
@@ -7,7 +7,7 @@
         <span class="brand-logo">
           <img [src]="defaultCoreConfig.app.appLogoImage" alt="brand-logo" width="36" height="24" />
         </span>
-        <h2 class="brand-text mb-0">{{ defaultCoreConfig.app.appTitle }}</h2>
+        <h2 class="brand-text text-dark mb-0">{{ defaultCoreConfig.app.appTitle }}</h2>
       </a>
     </li>
 
