--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -49,11 +49,11 @@
   <ul class="nav navbar-nav align-items-center ml-auto">
     <li ngbDropdown class="nav-item dropdown dropdown-language mr-lg-0 mr-50">
       <div class="nav-link dropdown-toggle cursor-pointer" id="dropdown-flag" ngbDropdownToggle>
-        <i class="fi fi-{{ languageOptions[_translateService.currentLang].flag }}"></i>
+        <i class="fi fi-{{ languageOptions[translateService.currentLang].flag }}"></i>
 <!--        <span class="ml-50 selected-language">{{ languageOptions[_translateService.currentLang].title }}</span>-->
       </div>
       <div ngbDropdownMenu>
-        <div class="cursor-pointer" *ngFor="let lang of _translateService.getLangs()" ngbDropdownItem (click)="setLanguage(lang)">
+        <div class="cursor-pointer" *ngFor="let lang of translateService.getLangs()" ngbDropdownItem (click)="setLanguage(lang)">
           <i class="fi fi-{{ languageOptions[lang].flag }}"></i> {{ languageOptions[lang].title }}
         </div>
       </div>
