[НАЧАЛО FULL REDIZAYN] tests module

--- a/src/app/modules/testing/components/test-card/test-card.component.html
+++ b/src/app/modules/testing/components/test-card/test-card.component.html
@@ -1,5 +1,5 @@
 <a [@fadeInLeftOnEnter] routerLink="test/{{ test.id }}">
-  <div class="card bg-gradient-chapter-{{ test.chapter.id }}">
+  <div class="card bg-chapter-{{ test.chapter.id }}">
     <div class="card-header d-block">
       <div class="chapter-title">
         {{ test.chapter.title }}
