--- a/src/app/modules/testing/components/test-card/test-card.component.scss
+++ b/src/app/modules/testing/components/test-card/test-card.component.scss
@@ -11,7 +11,8 @@ a {
   transform: scale(0.98);
   height: 326px;
   display: block;
-  
+  margin-bottom: 2rem;
+
   .on-hover {
     display: none;
   }
