--- a/src/core/scss/base/core/menu/_navigation.scss
+++ b/src/core/scss/base/core/menu/_navigation.scss
@@ -76,7 +76,7 @@
         max-width: 36px;
       }
       .brand-text {
-        color: $primary;
+        // color: $primary;
         padding-left: 1rem;
         margin-bottom: 0;
         font-weight: 600;
