--- a/src/core/scss/base/core/menu/menu-types/horizontal-menu.scss
+++ b/src/core/scss/base/core/menu/menu-types/horizontal-menu.scss
@@ -96,16 +96,12 @@
 
           // Brand Text Scss
           .brand-text {
-            color: $primary;
+            // color: $primary;
             padding-left: 1rem;
             margin-bottom: 0;
             font-weight: 600;
             letter-spacing: 0.01rem;
             font-size: 1.45rem;
-
-            @include dark-layout {
-              color: mix(white, $primary, 30) !important;
-            }
           }
         }
       }
