--- a/src/app/styles/vuexy-extended/forms.scss
+++ b/src/app/styles/vuexy-extended/forms.scss
@@ -2,9 +2,9 @@
 
 .form-control, .ng-select .ng-select-container {
   // border-color: #eaedef !important;
-  border: none !important;
+  // border: none !important;
   transition: 0s;
-  box-shadow: 0 0 5px #eaedef;
+  // box-shadow: 0 0 5px #eaedef;
 
   @include dark-layout() {
     box-shadow: none;
