[ADD] auth module

--- a/src/app/modules/auth/auth-modal/auth-modal.component.scss
+++ b/src/app/modules/auth/auth-modal/auth-modal.component.scss
@@ -1,5 +1,5 @@
-@import 'scss/angular/libs/toastr.component.scss';
-@import 'scss/base/pages/page-auth.scss';
+@import '../../../../core/scss/angular/libs/toastr.component';
+@import '../../../../core/scss/base/pages/page-auth';
 
 
 .modal .modal-footer {
