--- a/src/app/modules/contests/pages/contests/sections/section-categories/section-categories.component.html
+++ b/src/app/modules/contests/pages/contests/sections/section-categories/section-categories.component.html
@@ -3,8 +3,9 @@
     <spinner></spinner>
   </div>
 } @else {
-  <div class="d-flex mb-2 mt-2 justify-content-between">
-    <h2>{{ 'Categories' | translate }}</h2>
+  <div class="d-flex mb-2 mt-2 justify-content-start">
+    <kep-icon name="category" size="large-1" color="primary" type="duotone"></kep-icon>
+    <h2 class="ml-50">{{ 'Categories' | translate }}</h2>
   </div>
 
   <div class="row">
