--- a/src/app/modules/landing-page/sections/section-reviews/review-card/review-card.component.html
+++ b/src/app/modules/landing-page/sections/section-reviews/review-card/review-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header">
     <span class="text-primary">{{ review.firstName }} {{ review.lastName }}</span>
-    <span class="text-success"> {{ review.datetime }}</span>
+    <span class="text-success"> {{ review.date }}</span>
   </div>
   <div class="card-body">
     <p class="review-text text-dark">
