--- a/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.html
+++ b/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.html
@@ -4,11 +4,11 @@
       <div class="row">
         <div class="col-12 col-md-6 col-lg-3">
           <div class="mb-2">
-            <span class="badge badge-light-primary">Shahrlar</span>
+            <span class="badge badge-light-primary">{{ 'Reviews' | translate }}</span>
           </div>
 
-          <h3 class="font-weight-bolder mb-1">Haqiqiy foydalanuvchilar fikri</h3>
-          <p>Bizning foydalanuvchilarimiz o'z tajribalari haqida nima deyishlarini ko'ring</p>
+          <h3 class="font-weight-bolder mb-1">{{ 'LandingPage.SectionReviewsTitle' | translate }}</h3>
+          <p>{{ 'LandingPage.SectionReviewsText' | translate }}</p>
 
           <div class="mt-3 d-flex justify-content-start">
             <button rippleEffect class="btn btn-sm bg-light-primary">
