--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
@@ -148,7 +148,7 @@
               <i data-feather="x" class="text-danger"></i>
             </button>
           }
-          @if (currentUser && !contest.userInfo.isRegistered) {
+          @if (!currentUser || !contest.userInfo.isRegistered) {
             <button rippleEffect class="btn btn-sm round btn-gradient-primary" (click)="openRegistrationModal()"
               >
               <i data-feather="user" [size]="16"></i> {{ 'CONTESTS.REGISTER' | translate }}
