--- a/src/app/modules/arena/components/arena-list-card/arena-list-card.component.html
+++ b/src/app/modules/arena/components/arena-list-card/arena-list-card.component.html
@@ -2,14 +2,14 @@
   <div class="card-header">
     <div class="card-title text-dark">
       <kep-icon class="font-large-1" name="arena" type="duotone"></kep-icon>
-      <span class="ml-50">
+      <span class="ml-50 font-weight-bolder">
         {{ arena.title }}
       </span>
       <br>
-        <span class="ml-3 font-small-2 text-dark">
+        <span class="ml-3 font-small-3 text-dark">
           {{ 'Rated' | translate }},
         </span>
-        <span class="ml-25 font-small-2 text-dark">
+        <span class="ml-25 font-small-3 text-dark">
           {{ durationMinute }}m
         </span>
       </div>
@@ -33,18 +33,18 @@
         }
         @if (arena.status == ArenaStatus.Finished) {
           <span class="text-dark font-small-3">
-            {{ arena.finishNaturaltime }}
+            {{ arena.finishTime | localizedDate }}
           </span>
         }
       </div>
 
       <div class="card-info">
-        <span class="mr-25 badge badge-warning badge-glow" ngbTooltip="{{ 'Time' | translate }}">
+        <span class="mr-25 badge badge-brown badge-glow" ngbTooltip="{{ 'Time' | translate }}">
           <kep-icon class="font-small-4" name="challenge-time"></kep-icon>
           {{ arena.timeSeconds }}
         </span>
 
-        <span class="badge badge-warning badge-glow" ngbTooltip="{{ 'Questions' | translate }}">
+        <span class="badge badge-brown badge-glow" ngbTooltip="{{ 'Questions' | translate }}">
           <kep-icon class="font-small-4" name="challenge-task"></kep-icon>
           {{ arena.questionsCount }}
         </span>
