--- a/src/app/modules/arena/pages/arena/arena.component.scss
+++ b/src/app/modules/arena/pages/arena/arena.component.scss
@@ -1,15 +1,40 @@
 @import 'bootstrap/scss/mixins';
-@import 'bootstrap/scss/mixins/define-page-top';
 @import 'bootstrap/scss/mixins/dark-layout';
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
 @import 'scss/base/bootstrap-extended/variables';
 
-@include define-page-top(
-  $name: 'arena',
-  $light-background: linear-gradient(to right, $warning, lighten($warning, 10)),
-  $dark-background: linear-gradient(to right, #120e00, #221b00),
-);
+.arena-section-header {
+  .card {
+    background:linear-gradient(to right, $warning, lighten($warning, 10));
+
+    @include dark-layout {
+      background: linear-gradient(to right, #120e00, #221b00) !important;
+    }
+
+    .card-footer {
+      border-color: rgba($yellow, 0.1);
+    }
+  }
+
+  .btn {
+    border: none;
+    background: mix(black, $warning, 10) !important;
+
+    @include dark-layout {
+      background: #221b00 !important;
+    }
+  }
+
+  .useful-links {
+    display: flex;
+    margin-bottom: 2rem;
+
+    .btn {
+      width: 100%;
+    }
+  }
+}
 
 .arena {
   .arena-avatar {
@@ -28,7 +53,8 @@
     background: linear-gradient(to right, $warning, mix(white, $warning, 20));
 
     @include dark-layout {
-      background: linear-gradient(to right, #56440d, #542e0c);
+      box-shadow: none !important;
+      background: linear-gradient(to right, #120e00, #221b00) !important;
     }
   }
 
@@ -36,7 +62,8 @@
     background: linear-gradient(to left, $warning, mix(white, $warning, 20));
 
     @include dark-layout {
-      background: linear-gradient(to left, #56440d, #542e0c);
+      box-shadow: none !important;
+      background: linear-gradient(to left, #120e00, #221b00) !important;
     }
   }
 }
