--- a/src/@core/layout/components/footer/footer.component.html
+++ b/src/@core/layout/components/footer/footer.component.html
@@ -1,15 +1,16 @@
-<div class="card">
-  <div class="content-wrapper container-xxl p-0 full-width">
-    <div class="content-body">
+<div class="content-wrapper container-xxl p-0 full-width">
+  <div class="content-body">
+    <div class="card">
+
       <div class="card-body align-items-center d-flex justify-content-between">
         <div class="text-dark">{{ coreConfig.app.appTitle }} ©</div>
         <div>
           Powered by
-          <a ngbTooltip="Django" href="https://www.djangoproject.com/">
-            <kep-icon type="duotone" name="dj"></kep-icon>
+          <a href="https://www.djangoproject.com/" ngbTooltip="Django">
+            <kep-icon name="dj" type="duotone"></kep-icon>
           </a>
-          <a ngbTooltip="Angular" href="https://angular.io/">
-            <kep-icon type="duotone" name="angular"></kep-icon>
+          <a href="https://angular.io/" ngbTooltip="Angular">
+            <kep-icon name="angular" type="duotone"></kep-icon>
           </a>
         </div>
       </div>
