--- a/src/app/modules/testing/pages/test/test.component.scss
+++ b/src/app/modules/testing/pages/test/test.component.scss
@@ -1,5 +1,11 @@
 @import 'styles/kep-imports';
 
+::ng-deep body:has(.test-page-top) {
+  footer {
+    display: none !important;
+  }
+}
+
 .test-page-top {
   margin-left: -2rem;
   position: absolute;
